Departmanları tabloda güncelleme ve sil işlemi eklendi

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,9 +13,9 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    @Html.Partial("_Navbar");
+    @Html.Partial("_Navbar")
     <div class="container">
-        @RenderBody();
+        @RenderBody()
     </div>
     <script src="~/Scripts/jquery-3.0.0.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
