--- a/Views/Departman/Index.cshtml
+++ b/Views/Departman/Index.cshtml
@@ -1,8 +1,32 @@
-﻿
+﻿@using Ofis_ISE309.Models.EntityFramework
+@model List<Departman>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Departman Listesi</h2>
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Ad</th>
+            <th>Güncelle</th>
+            <th>Sil</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var departman in Model)
+        {
+        <tr>
+            <td>@departman.Id</td>
+            <td>@departman.Ad</td>
+            <td><a class="btn btn-primary" href="/Departman/Guncelle/@departman.Id">Güncelle</a></td>
+            <td><a class="btn btn-warning" href="/Departman/Sil/@departman.Id">Sil</a></td>
+        </tr>
+
+        }
+
+    </tbody>
+</table>
 
