--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -1,13 +1,13 @@
 ﻿<nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">WebSiteName</a>
+            <a class="navbar-brand" href="#">Personel Yönetim Sistemi</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Page 1</a></li>
-            <li><a href="#">Page 2</a></li>
-            <li><a href="#">Page 3</a></li>
+            <li class="active"><a href="/Departman">Departmanlar</a></li>
+            <li><a href="/Personel">Personeller</a></li>
+            <li><a href="#">Giriş Yap</a></li>
+            <li><a href="#">Kayıt Ol</a></li>
         </ul>
     </div>
 </nav>
