--- a/Views/Departman/DepartmanForm.cshtml
+++ b/Views/Departman/DepartmanForm.cshtml
@@ -14,12 +14,13 @@
         </div>
         <button type="submit" class="btn btn-success">Ekle</button>
     </form>*@
-@using (Html.BeginForm("Yeni", "Departman", FormMethod.Post))
+@using (Html.BeginForm("Kaydet", "Departman", FormMethod.Post))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Ad)
         @Html.TextBoxFor(m => m.Ad, new { @class = "form-control" })
 
     </div>
-    <button type="submit" class="btn btn-success">Ekle</button>
+    @Html.HiddenFor(m=> m.Id)
+    <button type="submit" class="btn btn-success">Kaydet</button>
 }
