database hatası düzeltildi.

--- a/Views/Personel/Index.cshtml
+++ b/Views/Personel/Index.cshtml
@@ -29,7 +29,7 @@
                 <td>@personel.Soyad</td>
                 <td>@personel.Departman.Ad</td>
                 <td>@(DateTime.Now.Year - personel.DogumTarihi.Value.Year)</td>
-                <td>@personel.Mass</td>
+                <td>@personel.Maas</td>
                 <td>@personel.DogumTarihi.Value.ToString("dd-MM-yyy")</td>
                 <td>@(personel.Cinsiyet==true?"Kadın":"Erkek")</td>
                 <td>@(personel.EvliMi==true?"Evli":"Bekar")</td>
