--- a/Views/Departman/Index.cshtml
+++ b/Views/Departman/Index.cshtml
@@ -4,10 +4,11 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <a class="btn btn-success" href="/Departman/Yeni">Yeni Departman</a>
 <h2>Departman Listesi</h2>
 <table class="table table-bordered">
-    <thead>
+    <thead class="thead-dark">
         <tr>
             <th>ID</th>
             <th>Ad</th>
@@ -18,12 +19,12 @@
     <tbody>
         @foreach (var departman in Model)
         {
-        <tr>
-            <td>@departman.Id</td>
-            <td>@departman.Ad</td>
-            <td><a class="btn btn-primary" href="/Departman/Guncelle/@departman.Id">Güncelle</a></td>
-            <td><a class="btn btn-warning" href="/Departman/Sil/@departman.Id">Sil</a></td>
-        </tr>
+            <tr>
+                <td>@departman.Id</td>
+                <td>@departman.Ad</td>
+                <td><a class="btn btn-primary" href="/Departman/Guncelle/@departman.Id">Güncelle</a></td>
+                <td><a class="btn btn-warning" href="/Departman/Sil/@departman.Id">Sil</a></td>
+            </tr>
 
         }
 
