CRUD işlemleri,personel ekleme

--- a/Views/Personel/Index.cshtml
+++ b/Views/Personel/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
+@Html.ActionLink("Yeni Personel", "Yeni", null,new{@class="btn btn-success"})
 <h2>Personeller Listesi</h2>
 <table class="table table-bordered">
     <thead class="thead-dark">
