CRUD işlemleri/Personel

--- a/Views/Departman/DepartmanForm.cshtml
+++ b/Views/Departman/DepartmanForm.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>Yeni</h2>
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
 
 @*@<form method="post">
         <div class="form-group">
