--- a/Views/Departman/Index.cshtml
+++ b/Views/Departman/Index.cshtml
@@ -7,6 +7,7 @@
 
 <a class="btn btn-success" href="/Departman/Yeni">Yeni Departman</a>
 <h2>Departman Listesi</h2>
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
 <table class="table table-bordered">
     <thead class="thead-dark">
         <tr>
