--- a/Views/Personel/Index.cshtml
+++ b/Views/Personel/Index.cshtml
@@ -6,6 +6,7 @@
 
 @Html.ActionLink("Yeni Personel", "Yeni", null,new{@class="btn btn-success"})
 <h2>Personeller Listesi</h2>
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
 <table class="table table-bordered">
     <thead class="thead-dark">
         <tr>
@@ -17,21 +18,25 @@
             <th scope="col">DoğumTarihi</th>
             <th scope="col">Cinsiyet</th>
             <th scope="col">EvlilikDurumu</th>
+            <th scope="col">Güncelle</th>
+            <th scope="col">Sil</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var personel in Model)
         {
-            <tr>
-                <td>@personel.Ad</td>
-                <td>@personel.Soyad</td>
-                <td>@personel.Departman.Ad</td>
-                <td>@(DateTime.Now.Year - personel.DogumTarihi.Value.Year)</td>
-                <td>@personel.Mass</td>
-                <td>@personel.DogumTarihi.Value.ToString("dd-MM-yyy")</td>
-                <td>@(personel.Cinsiyet == true ? "Kadın" : "Erkek")</td>
-                <td>@(personel.EvliMi == true ? "Evli" : "Bekar")</td>
-            </tr>
+        <tr>
+            <td>@personel.Ad</td>
+            <td>@personel.Soyad</td>
+            <td>@personel.DepartmanId</td>
+            <td>@personel.Yas</td>
+            <td>@personel.Mass</td>
+            <td>@personel.DogumTarihi.Value.ToString("dd-MM-yyyy")</td>
+            <td>@(personel.Cinsiyet == true ? "Kadın" : "Erkek")</td>
+            <td>@(personel.EvliMi == true ? "Evli" : "Bekar")</td>
+            <td>@Html.ActionLink("Güncelle", "Guncelle", new { id = personel.Id }, new { @class = "btn btn-success" })</td>
+            <td>@Html.ActionLink("Sil", "Sil", new { id = personel.Id }, new { @class = "btn btn-danger" })</td>
+        </tr>
         }
 
     </tbody>
