--- a/Views/Personel/PersonelForm.cshtml
+++ b/Views/Personel/PersonelForm.cshtml
@@ -5,27 +5,57 @@
 }
 
 <h2>Personel Formu</h2>
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
 @using (Html.BeginForm("Kaydet", "Personel", FormMethod.Post))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.Ad)
-        @Html.TextBoxFor(m => m.Personel.Ad)
+        @Html.TextBoxFor(m => m.Personel.Ad, new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.Soyad)
-        @Html.TextBoxFor(m => m.Personel.Soyad)
+        @Html.TextBoxFor(m => m.Personel.Soyad, new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.Yas)
-        @Html.TextBoxFor(m => m.Personel.Yas)
+        @Html.TextBoxFor(m => m.Personel.Yas, new { @class = "form-control" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Personel.DepartmanId)
+        @Html.DropDownListFor(m => m.Personel.DepartmanId, new SelectList(Model.departmanlar, "Id", "Ad"), "Departman Seçiniz", new { @class = "form-control" })
+
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.Mass)
-        @Html.TextBoxFor(m => m.Personel.Mass)
+        @Html.TextBoxFor(m => m.Personel.Mass, new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.DogumTarihi)
-        @Html.TextBoxFor(m => m.Personel.DogumTarihi)
+        @Html.TextBoxFor(m => m.Personel.DogumTarihi, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
     </div>
+    <div class="radio">
+        <lable>
+            @Html.RadioButtonFor(m => m.Personel.Cinsiyet, true)Kadın
+        </lable>
+        <lable>
+            @Html.RadioButtonFor(m => m.Personel.Cinsiyet, false)Erkek
+        </lable>
+    </div>
+    <div class="radio">
+        <lable>
+            @Html.RadioButtonFor(m => m.Personel.EvliMi, true)Evli;
+        </lable>
+        <lable>
+            @Html.RadioButtonFor(m => m.Personel.EvliMi, false)Bekar;
+        </lable>
+    </div>
+    @**<div class="custom-checkbox">
+            <lable>
+                @Html.CheckBoxFor(m => m.Personel.EvliMi.Value)Evliyseniz İşaretleyiniz
+            </lable>
+
+        </div>*@
+
+    <button type="submit" class="btn btn-success">Kaydet</button>
 }
 
