--- a/Views/Personel/PersonelForm.cshtml
+++ b/Views/Personel/PersonelForm.cshtml
@@ -4,34 +4,42 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <h2>Personel Formu</h2>
 <link href="~/Content/bootstrap.css" rel="stylesheet" />
+@Html.ValidationSummary()
 @using (Html.BeginForm("Kaydet", "Personel", FormMethod.Post))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.Ad)
         @Html.TextBoxFor(m => m.Personel.Ad, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Personel.Ad)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.Soyad)
         @Html.TextBoxFor(m => m.Personel.Soyad, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Personel.Soyad)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.Yas)
         @Html.TextBoxFor(m => m.Personel.Yas, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Personel.Yas)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.DepartmanId)
         @Html.DropDownListFor(m => m.Personel.DepartmanId, new SelectList(Model.departmanlar, "Id", "Ad"), "Departman Seçiniz", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Personel.DepartmanId)
 
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.Mass)
         @Html.TextBoxFor(m => m.Personel.Mass, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Personel.Mass)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.DogumTarihi)
         @Html.TextBoxFor(m => m.Personel.DogumTarihi, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
+        @Html.ValidationMessageFor(m => m.Personel.DogumTarihi)
     </div>
     <div class="radio">
         <lable>
@@ -40,6 +48,7 @@
         <lable>
             @Html.RadioButtonFor(m => m.Personel.Cinsiyet, false)Erkek
         </lable>
+        @Html.ValidationMessageFor(m => m.Personel.Cinsiyet)
     </div>
     <div class="radio">
         <lable>
@@ -48,6 +57,7 @@
         <lable>
             @Html.RadioButtonFor(m => m.Personel.EvliMi, false)Bekar;
         </lable>
+        @Html.ValidationMessageFor(m => m.Personel.EvliMi)
     </div>
     @**<div class="custom-checkbox">
             <lable>
