jquery de client side validation işlemleri yapıldı.

--- a/Views/Personel/PersonelForm.cshtml
+++ b/Views/Personel/PersonelForm.cshtml
@@ -68,4 +68,9 @@
 
     <button type="submit" class="btn btn-success">Kaydet</button>
 }
+@section scripts
+    {
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+}
 
