--- a/Views/Personel/PersonelForm.cshtml
+++ b/Views/Personel/PersonelForm.cshtml
@@ -10,6 +10,7 @@
 @Html.ValidationSummary()
 @using (Html.BeginForm("Kaydet", "Personel", FormMethod.Post))
 {
+    @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(m => m.Personel.Ad)
         @Html.TextBoxFor(m => m.Personel.Ad, new { @class = "form-control" })
