--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,8 +21,10 @@
     </div>
     <script src="~/Scripts/jquery-3.0.0.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    @RenderSection("scripts",false)
-  
+    <script src="~/Scripts/custom.js"></script>
+
+    @RenderSection("scripts", false)
+
 
 </body>
 </html>
