--- a/Views/Departman/Index.cshtml
+++ b/Views/Departman/Index.cshtml
@@ -8,7 +8,7 @@
 <a class="btn btn-success" href="/Departman/Yeni">Yeni Departman</a>
 <h2>Departman Listesi</h2>
 <link href="~/Content/bootstrap.css" rel="stylesheet" />
-<table class="table table-bordered">
+<table class="table table-bordered" id="tblDepartmanlar">
     <thead class="thead-dark">
         <tr>
             <th>ID</th>
@@ -24,7 +24,7 @@
                 <td>@departman.Id</td>
                 <td>@departman.Ad</td>
                 <td><a class="btn btn-primary" href="/Departman/Guncelle/@departman.Id">Güncelle</a></td>
-                <td><a class="btn btn-warning" href="/Departman/Sil/@departman.Id">Sil</a></td>
+                <td><a class="btn btn-warning btnDepartmanSil" data-id="@departman.Id">Sil</a></td>
             </tr>
 
         }
