--- a/Views/Security/Login.cshtml
+++ b/Views/Security/Login.cshtml
@@ -39,10 +39,10 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="remember-me" class="text-info"><span>Beni Hatırla</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                    <input type="submit" name="submit" class="btn btn-info btn-success" value="submit">
+                                    <input type="submit" name="submit" class="btn btn-info btn-success" value="Kayıt Ol">
                                 </div>
                                 <div id="register-link" class="text-right">
-                                    <a href="#" class="text-info">Kayıt Ol</a>
+                                    <a href="#" class="text-info">Giriş</a>
                                 </div>
                             </form>
                         </div>
